--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-imask": "^7.6.1",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-number-format": "^5.4.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "shadcn-packaged": "^2025.9.8",
