--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@heroui/react": "^2.8.5",
     "@lottiefiles/dotlottie-react": "^0.15.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
-    "antd": "^5.27.3",
+    "antd": "^5.28.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.543.0",
     "moment": "^2.30.1",
+    "primereact": "^10.9.7",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
@@ -33,6 +36,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "shadcn-packaged": "^2025.9.8",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
