--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-highlight-words": "^0.21.0",
     "react-imask": "^7.6.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-number-format": "^5.4.4",
